--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
             <h2>Join Twitter today</h2>
             <div class="logging">
                 <button class="btn-1" type="button">Sign Up</button>
-                <button class="btn-2" type="button">Login</button>
+                <a href="./Login page/index.html"><button class="btn-2" type="button">Login</button></a>
             </div>
            </div>
         </div>
     </div>
     <footer>
-        <!-- About Help Center Terms of Service Privacy Policy Cookie Policy Ads info Blog Status Careers Brand Resources Advertising Marketing Twitter for Business Developers Directory Settings
-© 2021 Twitter, Inc. -->
+        
         <a href="">About</a>
         <a href="">Help</a>
         <a href="">Center</a>
